Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45371

WebGL conformance: Setting alpha attribute to false works incorrectly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.5.0 Beta
    • 5.5.0 Alpha
    • Canvas3D
    • None
    • Change-Id: Ibc6a4596f00ccebce8b828f8d579c3a8bf4346c7

    Description

      If alpha attribute is false, alpha bits should be 0.

      Attachments

        For Gerrit Dashboard: QTBUG-45371
        # Subject Branch Project Status CR V

        Activity

          People

            tokorpip Tomi Korpipää
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes