Fixed incorrect functionality of alpha attribute

Alpha attribute was ignored at getContext, even though alpha bits were
set based on the attribute.

Change-Id: Ibc6a4596f00ccebce8b828f8d579c3a8bf4346c7
Task-number: QTBUG-45371
Reviewed-by: Pasi Keränen <pasi.keranen@digia.com>