src/imports/qtcanvas3d/canvas3d.cpp
@@ -250,7 +250,6 @@ QJSValue Canvas::getContext(const QString &type, const QVariantMap &options)
             m_contextAttribs.setDepth(true);
 
         // Ensure ignored attributes are left to their default state
-        m_contextAttribs.setAlpha(false);
         m_contextAttribs.setPremultipliedAlpha(false);
         m_contextAttribs.setPreserveDrawingBuffer(false);
         m_contextAttribs.setPreferLowPowerToHighPerformance(false);
